<resources>
    <string name="app_name">Нормы этики</string>
    <string name="textTitleMainAct">Нормы этики</string>
    <string name="textMainAct1">Особенности</string>
    <string name="textMainAct2">Важные составляющие</string>
    <string name="textMainAct3">Моральные нормы взаимоотношений</string>
    <string name="textMainAct4">Правила этики</string>
    <string name="textMainAct5">Примеры поведения</string>
    <string name="txtPeculiaritiesAct1">Этические нормы – это определенный свод правил, который
        определяет поведение при взаимодействии с окружающими людьми. Основная цель – сделать
        контакты приятными и более эффективными для всех. Если не соблюдать этикет, это не приведет
        к каким-либо наказаниям в виде уголовной или административной ответственности. Однако
        такое поведение будет порицаться окружающими. Важно помнить, что все наши действия
        характеризуют нас как личность. Наука о нравственности сейчас преподается не во
        всех учебных заведениях. Вот почему многие молодые люди грубые и бестактные, не
        знают как себя вести в различных ситуациях. Важно воспитывать современную молодежь
        в соответствии с этическими нормами.</string>
    <string name="txtPeculiaritiesAct2">Выполнения правил этики можно добиться, когда каждый будет
        подавать хороший пример. Помните, что взаимодействие с вежливым человеком вызывает
        удовольствие. Диалог с грубияном, напротив, ощущение неприятия, и даже дискомфорт.</string>
    <string name="txtPeculiaritiesAct3">Предпосылки возникновения можно найти еще в трудах
        Аристотеля, который впервые употребил термин этика, а также определил мораль как систему
        ценностей для регуляции общественных отношений. Уже в те времена люди понимали важность и
        значимость этических норм и правил поведения для эффективной жизнедеятельности.</string>
    <string name="txtPeculiaritiesAct4">Основные принципы:</string>
    <string name="txtPeculiaritiesAct5"><u>- возможность жертвовать чем-то ради другого;</u></string>
    <string name="txtPeculiaritiesAct51"><u>- устанавливать взаимодействия с окружающими в добрых традициях;</u></string>
    <string name="txtPeculiaritiesAct52"><u>- самокритичность к себе: имеется в виду ответственность и выполнение
        морального долга;</u></string>
    <string name="txtPeculiaritiesAct53"><u>- справедливое отношение к своему собеседнику и любой ситуации;</u></string>
    <string name="txtPeculiaritiesAct54"><u>- равноправие между людьми: человек, соблюдающий этические нормы, не будет
        себя ставить выше своего собеседника.</u></string>
    <string name="txtPeculiaritiesAct55">Только с помощью искренности и открытости может возникнуть доверие между
        людьми, и тогда общение уже перейдет на другой более качественный уровень.</string>
    <string name="txtmportantIngredientsAct1">Одной из составляющих норм этики является деловой этикет. Именно от него будет
        зависеть успех любого предприятия. Эффективное и верное взаимодействие людей в бизнесе
        позволит легче налаживать деловые контакты, правильно вести переговоры и, как следствие,
        заключать важные контракты. Главное – следовать основным правилам.</string>
    <string name="txtmportantIngredientsAct2">В любой ситуации всегда стоит быть вежливым. Независимо от испытываемых чувств
        и эмоций, важно сохранять самообладание, чтобы не попасть в неловкую ситуацию и
        впоследствии не пожалеть о своем поведении. Деловой этикет подразумевает соблюдение
        определенных правил в одежде, а также создание стильного внешнего вида.</string>
    <string name="txtmportantIngredientsAct3">Важны этические нормы и в различных профессиях, например, в медицине.
        Для сестринского поведения можно выделить такие принципы, как гуманность, сострадание,
        доброжелательность, бескорыстность, трудолюбие и другие. Только руководствуясь этими
        составляющими, можно вести эффективную рабочую деятельность.</string>
    <string name="txtRelationshipAct1">Моральные нормы наших взаимоотношений не правовые. Однако 
        это не означает, что их можно с легкостью нарушать. Если каждый начнет с себя, с осознания 
        и совершенствования своего поведения, то станет возможным процесс построения гармоничного 
        общества.</string>
    <string name="txtRelationshipAct2">Основная цель таких норм – проявление доброты в человеке. 
        Нужно принимать тот факт, что душе требуется поддержание внутреннего доброго климата. Такие 
        правила актуальны для любой деятельности людей, нарушение их ведет к негативным 
        последствиям. Например, при активной информационной составляющей современного мира, 
        когда есть доступ во всемирную паутину, можно найти и получить любую информацию. Какое-то 
        недоброжелательное действие, увиденное подростком, может быть истолковано неправильно и 
        принято за основу поведения.</string>
    <string name="txtRelationshipAct3">Этические нормы – это система общих ценностей и правил 
        этики, которые соблюдают люди. Основной базой должны быть вежливость, корректность, 
        тактичность, скромность в общении, точность и предупредительность.</string>
    <string name="txtRuleshipAct1">Расположить окружающих к себе можно с помощью хороших манер и
        ответственного поведения. Соблюдение норм и правил этики поможет не только создать нужное
        впечатление при знакомстве, но и заслужить репутацию воспитанного и культурного человека.
        Далее разберем основные правила этики.</string>
    <string name="txtRuleshipAct2"><u>- Такт или чувство меры. Вы должны знать, что следует сказать
        или сделать в определенной ситуации, а что запрещают нормы поведения. В этом случае будет
        играть важную роль ваша скромность. Не секрет, что эгоцентричные люди желают всегда
        привлекать внимание, участвовать во всех разговорах. Стоит отметить, что такту не учатся,
        однако можно развивать это чувство. Главное – желание и тренировка.</u></string>
    <string name="txtRuleshipAct3"><u>- Стоит отметить и такт в одежде. Не обязательно следовать
        последним модным тенденциям. Важно просто одеваться со вкусом и быть опрятным. Это будет
        означать ваше внимание к собеседнику. Люди обычно ограничивают общение с неряшливым человеком.</u></string>
    <string name="txtRuleshipAct31"><u>- Оценивайте свою манеру разговора. Стоит быть внимательным
        и чутким к собеседнику, чтобы не вызвать в разговоре тяжелые воспоминания, не задеть его
        неуместными шутками. Также не следует оскорблять человека. Будет считаться неприличным и
        шепот на ухо соседу. Во время активной дискуссии нельзя чересчур жестикулировать,
        разбрызгивать слюной.</u></string>
    <string name="txtRuleshipAct32"><u>- Важно быть в любых моментах точным, избегать небрежности.
        Не следует заискивать и быть чересчур любопытным. Помните, что плохим тоном будет, если вы
        заглядываете в чужие документы или подслушиваете разговоры других людей. Не стоит человеку
        указывать на его недостатки в одежде или поведении. Если вас что-то волнует, то нужно
        высказать ему это наедине. Если вам помогли или оказали услугу, то стоит поблагодарить
        человека.</u></string>
    <string name="txtRuleshipAct33"><u>- Важно уметь владеть собой. Подобающее поведение
        предполагает сохранять спокойствие в любой ситуации. Не стоит явно проявлять свой восторг
        или недовольство в определенный момент. Не надо демонстративно уходить, если подошел
        несимпатичный для вас человек. Также проявляйте заботу о других людях и помните, что
        преимущество имеют женщины перед мужчинами, пожилые люди перед молодыми, больные перед
        здоровыми людьми.</u></string>
    <string name="txtRuleshipAct4">Обществом поощряются те типы хороших манер, которые
        устанавливают варианты конструктивного общения в отличие от негативного поведения.
        Это относится к манере общаться, сидеть, двигаться и т. д.</string>
    <string name="txtRuleshipAct5">Подобные правила, регулирующие поведение, являются довольно
        эффективными. Общество заинтересовано в том, чтобы каждый человек им следовал. Именно
        благодаря правилам поведения создается эффективное управление на производстве, оптимальное
        взаимодействие в коллективе служащих, учащихся, обеспечивается качественное выполнение всех задач.</string>
    <string name="txtRuleshipAct6">Таким образом, этические нормы регламентируют то поведение,
        которое позволяет каждому человеку принимать другого человека, эффективно существовать в
        обществе, добиваться целей.</string>
    <string name="txtExamplesAct1">Отрицание норм приличия является распространенным вариантом
        поведения в молодежной среде. Конечно, такая модель поведения не содержит противозаконное
        нарушение, а значит, не наказывается уголовно или с помощью административных штрафов. При
        этом все чаще в общеобразовательных учреждениях начинают уделять внимание вопросу этических норм.</string>
    <string name="txtExamplesAct2">Молодежь должна впитывать ценности, которые им своим примером
        передают взрослые. Вот почему важно вести себя в соответствии с нормами и взрослым и детям.
        Примеры поведения характеризуются большим разнообразием.</string>
    <string name="txtExamplesAct3"><u>- Стоит помнить, что если вы виноваты перед человеком, то
        следует коротко извиниться, сказав слово «прости» или «простите, пожалуйста». Если вам
        нужно попросить об услуге, то нужно это делать вежливо и учтиво. Можно сказать «простите
        за беспокойство» или «будьте добры».</u></string>
    <string name="txtExamplesAct31"><u>- Что касается движений, то пусть они будут максимально
        естественны. Ходите твердо, размерено и равномерно. Проследите, чтобы руки не болтались
        безжизненно. Двигайте ими непринужденно и легко. Не стоит подпирать ими бока или держать их
        в карманах. Такое поведение является неприемлемым.</u></string>
    <string name="txtExamplesAct32"><u>- По тому, как человек сидит, можно говорить о его
        воспитании. Не стоит делать это вальяжно, небрежно откинувшись на спинку стула. Никогда
        не закидывайте ноги на стол, не раскачивайтесь на стуле, не сидите на нем верхом. Желаете
        положить ногу на ногу – это допустимо, однако нельзя, чтобы щиколотка доходила до колена
        другой ноги.</u></string>
    <string name="txtExamplesAct33"><u>- Особенностью поведения некоторых людей является плохая
        привычка очищать нос, оглушительно высмаркиваясь. Особенно это неприлично делать в местах,
        где много людей.</u></string>
    <string name="txtExamplesAct34"><u>- Не выдавайте свое плохое расположение духа. Лучше
        приветливо улыбнитесь. Также не следует гримасничать. Это будет выглядеть нетактично и
        неприятно для окружающих. Когда вы с кем-то разговариваете – смотрите собеседнику в глаза.
        Не следует делать это вызывающе или нагло, лучше будьте приветливы и скромны.</u></string>
    <string name="txtExamplesAct35"><u>- Не стоит тараторить или невнятно бормотать. Говорите твердо
        и уверено, не очень громко, но и не тихо, чтобы все ваши слова были понятны. Часто женщины
        стремятся проявить свою индивидуальность, произнося слова нарочито неестественно. Это стоит
        делать только в дружеской компании.</u></string>
    <string name="txtExamplesAct36"><u>- Особое внимание – смеху. Он не должен стать оглушительным,
        приковывающим внимание. Также не следует закрывать ладонями лицо. Это выглядит непривлекательно.</u></string>
</resources>