<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PeculiaritiesActivity">
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textMainAct1"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@color/color_btn_text"
        android:textSize="30sp"
        android:gravity="center"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textTitle"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtPeculiaritiesAct1"
                android:textColor="@color/color_btn_text"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:padding="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtPeculiaritiesAct2"
                android:textColor="@color/color_btn_text"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:padding="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtPeculiaritiesAct3"
                android:textColor="@color/color_btn_text"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:padding="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtPeculiaritiesAct4"
                android:textColor="@color/color_btn_text"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:padding="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtPeculiaritiesAct5"
                android:textColor="@color/color_btn_text"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:paddingHorizontal="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtPeculiaritiesAct51"
                android:textColor="@color/color_btn_text"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:paddingHorizontal="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtPeculiaritiesAct52"
                android:textColor="@color/color_btn_text"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:paddingHorizontal="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtPeculiaritiesAct53"
                android:textColor="@color/color_btn_text"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:paddingHorizontal="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtPeculiaritiesAct54"
                android:textColor="@color/color_btn_text"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:paddingHorizontal="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtPeculiaritiesAct55"
                android:textColor="@color/color_btn_text"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:paddingHorizontal="10dp"
                />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>