<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesActivity">
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textMainAct4"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@color/color_btn_text"
        android:textSize="30sp"
        android:gravity="center"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textTitle"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtRuleshipAct1"
                android:textColor="@color/color_btn_text"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:padding="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtRuleshipAct2"
                android:textColor="@color/color_btn_text"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:paddingHorizontal="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtRuleshipAct3"
                android:textColor="@color/color_btn_text"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:paddingHorizontal="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtRuleshipAct31"
                android:textColor="@color/color_btn_text"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:paddingHorizontal="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtRuleshipAct32"
                android:textColor="@color/color_btn_text"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:paddingHorizontal="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtRuleshipAct33"
                android:textColor="@color/color_btn_text"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:paddingHorizontal="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtRuleshipAct4"
                android:textColor="@color/color_btn_text"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:padding="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtRuleshipAct5"
                android:textColor="@color/color_btn_text"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:padding="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtRuleshipAct6"
                android:textColor="@color/color_btn_text"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:padding="10dp"
                />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>